disable scrollbars to resolve overlapping button

--- a/src/tabs/Tabs.module.css
+++ b/src/tabs/Tabs.module.css
@@ -23,4 +23,14 @@ limitations under the License.
 .tabList {
   overflow-y: auto;
   max-width: 100%;
+
+  /*no scrollbars*/
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
+.tabList::-webkit-scrollbar {
+  /*no scrollbars*/
+  background: transparent; /* Chrome/Safari/Webkit */
+  width: 0px;
 }
